2004-10-05  Sam Steingold  <sds@gnu.org>

	* encoding.d (CONVERT-STRING-FROM-BYTES, CONVERT-STRING-TO-BYTES):
	check_encoding() can trigger GC
	Reported by Jörg Höhle

2004-10-05  Jörg Höhle  <hoehle@users.sourceforge.net>

	* foreign.d (fehler_foreign_variable, fehler_foreign_function):
	raise error of type type-error

2004-10-04  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/sock.lisp (open-unix-socket): use ABSOLUTE-PATHNAME
	(open-unix-socket-stream): new function, returns a STREAM

2004-10-04  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX::CONFSTR): use my_malloc()
	instead of malloc() because of error handling

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* pathname.d (ABSOLUTE-PATHNAME): New function.
	(physical_namestring): Call check_no_wildcards.
	* edit.lisp (edit-file): Use absolute-pathname instead of
	translate-pathname.
	* cfgwin32.lisp (edit-file): Likewise.
	* runprog.lisp (xstring): Likewise.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* modules/syscalls/calls.c (POSIX::MKNOD): Don't use two popSTACK()s
	in the same expression, as it has undefined behaviour.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* modules/syscalls/calls.c (POSIX::SET-LIMITS): Give a meaningful
	error message.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* modules/syscalls/calls.c (POSIX::CONFSTR): Don't use alloca.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* modules/syscalls/calls.c: Include sys/resource.h early enough, so
	that getrlimit_arg can use it. Also include sys/types.h before
	sys/stat.h, not after it.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* syscalls/calls.c: Don't set Solaris specific flags just temporarily
	for a few includes. We don't control their effect.
	* syscalls/Makefile.in (CPPFLAGS): Add Solaris specific flags here.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* utils/modprep.lisp: Don't print modprep's timings.
	(modprep): Print a filename using ~A, not ~S.

2004-10-03  Bruno Haible  <bruno@clisp.org>
